actualizacion de apartado de cadenas

--- a/catalago.html
+++ b/catalago.html
@@ -87,15 +87,15 @@
             <!-- Producto 5 -->
             <div class="col-md-3 mb-4">
                 <div class="card">
-                    <img src="product/15.jpg" class="card-img-top" alt="Producto 5">
+                    <img src="product/15.jpg" class="card-img-top" alt="Producto 4">
                     <div class="card-body">
-                        <h6 class="card-title">Cadena de oro amarillo 18K</h6>
-                        <p class="card-text">LPS.4800.00</p>
+                        <h6 class="card-title">Cadena de oro rosa 18K</h6>
+                        <p class="card-text">LPS.6200.00</p>
                         <div class="input-group mb-3">
                             <input type="number" class="form-control" placeholder="Cantidad" min="1" value="1">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="button">
-                                    <i class="bi bi-cart"></i> Agregar al carrito
+                                    <i class="bi bi-cart"></i>Agregar al carrito
                                 </button>
                             </div>
                         </div>
@@ -105,15 +105,15 @@
             <!-- Producto 6 -->
             <div class="col-md-3 mb-4">
                 <div class="card">
-                    <img src="product/70.jpg" class="card-img-top" alt="Producto 6">
+                    <img src="product/70.jpg" class="card-img-top" alt="Producto 4">
                     <div class="card-body">
-                        <h6 class="card-title">Cadena de platino 18K</h6>
-                        <p class="card-text">LPS.7500.00</p>
+                        <h6 class="card-title">Cadena de oro 18K</h6>
+                        <p class="card-text">LPS.6200.00</p>
                         <div class="input-group mb-3">
                             <input type="number" class="form-control" placeholder="Cantidad" min="1" value="1">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="button">
-                                    <i class="bi bi-cart"></i> Agregar al carrito
+                                    <i class="bi bi-cart"></i>Agregar al carrito
                                 </button>
                             </div>
                         </div>
@@ -123,15 +123,15 @@
             <!-- Producto 7 -->
             <div class="col-md-3 mb-4">
                 <div class="card">
-                    <img src="product/32.jpg" class="card-img-top" alt="Producto 7">
+                    <img src="product/32.jpg" class="card-img-top" alt="Producto 4">
                     <div class="card-body">
-                        <h6 class="card-title">Cadena de oro blanco 14K</h6>
-                        <p class="card-text">LPS.4100.00</p>
+                        <h6 class="card-title">Cadena de flor 18K</h6>
+                        <p class="card-text">LPS.6200.00</p>
                         <div class="input-group mb-3">
                             <input type="number" class="form-control" placeholder="Cantidad" min="1" value="1">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="button">
-                                    <i class="bi bi-cart"></i> Agregar al carrito
+                                    <i class="bi bi-cart"></i>Agregar al carrito
                                 </button>
                             </div>
                         </div>
@@ -149,15 +149,13 @@
                             <input type="number" class="form-control" placeholder="Cantidad" min="1" value="1">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="button">
-                                    <i class="bi bi-cart"></i> Agregar al carrito
+                                    <i class="bi bi-cart"></i>Agregar al carrito
                                 </button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
         <!-- Sección de Aritos -->
         <h2 class="mb-4">Aritos</h2>
         <div class="row">
