--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Inicio</a>
+            <a class="navbar-brand" href="/index.html">Inicio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Cadenas</a></li>
-                                <li><a class="dropdown-item" href="#">Contactanos</a></li>
+                                <li><a class="dropdown-item" href="#">Pulseras</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -59,7 +59,7 @@
                         </li>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Productos</a>
+                        <a class="nav-link" href="/catalago.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Imperial Gems</a>
