--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joy Nova</title>
+    <title>Imperial Gems</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/styles.css" />
 
     <div class="container-hero">
         <div class="container hero">
@@ -21,7 +21,7 @@
 
             <div class="container-logo">
                 <i class="fa-regular fa-gem fa-beat-fade"></i>
-                <h1 class="logo"><a href="/">Imperil Gems</a></h1>
+                <h1 class="logo"><a href="/">Imperial Gems</a></h1>
             </div>
 
             <div class="container-user">
@@ -78,6 +78,11 @@
     </nav>
 
 
+
+
+
+
+    
 </head>
 
 <body>
@@ -101,9 +106,7 @@
         }
     </style>
 
-   
-
-
+  
 
     <div id="carouselExampleDark" class="carousel carousel-dark slide">
         <div class="carousel-indicators">
