Actualizar nombres de imágenes de productos en index.html

--- a/ProyectoJoyeria-Index/index.html
+++ b/ProyectoJoyeria-Index/index.html
@@ -323,7 +323,7 @@
 					<!-- Producto 1 -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="product/4.jpg" alt="Cafe Irish" />
+							<img src="product/4.jpg" alt="moneda 1" />
 							<span class="discount">-13%</span>
 							<div class="button-group">
 								<span>
@@ -356,7 +356,7 @@
 					<div class="card-product">
 						<div class="container-img">
 							<img
-								src="img/cafe-ingles.jpg"
+								src="img/5.jpg"
 								alt="Cafe incafe-ingles.jpg"
 							/>
 							<span class="discount">-22%</span>
