``` No se realizaron cambios en el código. ```

--- a/ProyectoJoyeria-Index/index.html
+++ b/ProyectoJoyeria-Index/index.html
@@ -512,7 +512,7 @@
 							<span class="add-cart">
 								<i class="fa-solid fa-basket-shopping"></i>
 							</span>
-							<p class="price">$4.60 <span>$5.30</span></p>
+							<p class="price">L1000 <span>L1000</span></p>
 						</div>
 					</div>
 					<!-- Producto 2 -->
