--- a/index - alex NO TOCAR.html
+++ b/index - alex NO TOCAR.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imperial Gems</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -349,14 +350,14 @@
 							<span class="add-cart">
 								<i class="fa-solid fa-basket-shopping"></i>
 							</span>
-							<p class="price">$4.60 <span>$5.30</span></p>
+							<p class="price">L500 <span>L600</span></p>
 						</div>
 					</div>
 					<!-- Producto 2 -->
 					<div class="card-product">
 						<div class="container-img">
 							<img
-								src="img/cafe-ingles.jpg"
+								src="product/5.jpg"
 								alt="Cafe incafe-ingles.jpg"
 							/>
 							<span class="discount">-22%</span>
@@ -384,14 +385,14 @@
 							<span class="add-cart">
 								<i class="fa-solid fa-basket-shopping"></i>
 							</span>
-							<p class="price">$5.70 <span>$7.30</span></p>
+							<p class="price">L700.00<span>L780.00</span></p>
 						</div>
 					</div>
 					<!--  -->
 					<div class="card-product">
 						<div class="container-img">
 							<img
-								src="img/cafe-australiano.jpg"
+								src="product/6.jpg"
 								alt="Cafe Australiano"
 							/>
 							<div class="button-group">
@@ -418,13 +419,13 @@
 							<span class="add-cart">
 								<i class="fa-solid fa-basket-shopping"></i>
 							</span>
-							<p class="price">$3.20</p>
+							<p class="price">L500.00</p>
 						</div>
 					</div>
 					<!--  -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="img/cafe-helado.jpg" alt="Cafe Helado" />
+							<img src="product/7.jpg" alt="Cafe Helado" />
 							<div class="button-group">
 								<span>
 									<i class="fa-regular fa-eye"></i>
@@ -449,7 +450,7 @@
 							<span class="add-cart">
 								<i class="fa-solid fa-basket-shopping"></i>
 							</span>
-							<p class="price">$5.60</p>
+							<p class="price">L700.00</p>
 						</div>
 					</div>
 				</div>
@@ -638,7 +639,7 @@
                             </h3>
 							<span>05 de febrero 2025</span>
 							<p>
-								Encuentra chrms de Imperial Gems cargados de significado qie amará el día de San Valentín y todos los días.
+								Encuentra chrams de Imperial Gems cargados de significado qie amará el día de San Valentín y todos los días.
 							</p>
 							<div class="btn-read-more">Leer más</div>
 						</div>
@@ -773,7 +774,10 @@
         crossorigin="anonymous"></script>
 
     
-    
+		<script
+		src="https://kit.fontawesome.com/81581fb069.js"
+		crossorigin="anonymous"
+	></script>
 </body>
 
 </html>
