mover el archivo contacto y agregar nueva funcionalidad PHP para mostrar datos (pruebas)

--- a/index - alex NO TOCAR.html
+++ b/index - alex NO TOCAR.html
@@ -724,7 +724,7 @@
                         <div class="information">
                             <p class="title-footer">Información</p>
                             <ul>
-                                <li><a href="#">Acerca de Nosotros</a></li>
+                                <li><a href="/Contacto.html">Acerca de Nosotros</a></li>
                                 <li><a href="#">Información Delivery</a></li>
                                 <li><a href="#">Politicas de Privacidad</a></li>
                                 <li><a href="#">Términos y condiciones</a></li>
@@ -766,18 +766,13 @@
                         <img src="img/payment.png" alt="Pagos">
                     </div>
                 </div>
-    
-    </footer>
-    <script src="https://kit.fontawesome.com/81581fb069.js" crossorigin="anonymous"></script>
+    		</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
     
-		<script
-		src="https://kit.fontawesome.com/81581fb069.js"
-		crossorigin="anonymous"
-	></script>
+		<script src="https://kit.fontawesome.com/45b2b3afef.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
